Links for pixi.js

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=
   , initial-scale=1.0">
   <title>Aeroplane-Kindle</title>
-  <!-- <script src="https://pixijs.download/release/pixi.js"></script> -->
-  <script src="/pixi.js" ></script>
+  <script src="https://pixijs.download/release/pixi.js"></script>
+  <!-- <script src="/pixi.js" ></script> -->
   <style >
     * {
       box-sizing: content-box;
