--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aeroplane-Kindle</title>
-  <script src="https://pixijs.download/release/pixi.js"></script>
-  <!-- <script src="/pixi.js" ></script> -->
+  <!-- <script src="https://pixijs.download/release/pixi.js"></script> -->
+  <script src="/pixi.js"  type="module"></script>
   <style >
     * {
       box-sizing: content-box;
