--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aeroplane-Kindle</title>
   <!-- <script src="https://pixijs.download/release/pixi.js"></script> -->
-  <script src="/pixi.js"  type="module"></script>
+  <script src="./pixi.js"  type="module"></script>
   <style >
     * {
       box-sizing: content-box;
